apps/overlays/ci/patches/resources-ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-frontend
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-backend
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-chatbot-chromadb
  namespace: juiceshop-chatbot
spec:
  template:
    spec:
      containers:
        - name: chromadb
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
